# pda-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yml  example.env  justfile  note.md
.github/workflows/: docker-build-publish.yml
.helix/: languages.toml
doc/: verifiable_encryption.md
doc/assets/: verifiable-encryption.drawio
program-chacha/src/: main.rs
scripts/: common.sh  config_lets_encrypt.sh  download_groth16_circuit.sh  init_celestia_docker.sh  install_groth16_circuit.sh  setup_lets_encrypt.sh  setup_remote_host.sh  test_example_data_file_via_curl.sh  upload_to_docker_host.sh
service/: Cargo.toml  build.rs
service/src/: main.rs
service/src/internal/: error.rs  job.rs  mod.rs  retry.rs  runner.rs  util.rs
service/src/rpc/: tx_config.rs
src/rpc/: blob.rs
zkVM/common/: Cargo.toml
zkVM/common/src/: lib.rs
zkVM/sp1/: Cargo.toml  build.rs  justfile
zkVM/sp1/program-chacha/: Cargo.toml
zkVM/sp1/program-chacha/src/: main.rs
