[workspace]
members = ["service", "program-chacha", "lib"]
default-members = ["service"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nuke <nuke-web3@proton.me>"]
license = "MIT"
homepage = "https://celestia.org"
repository = "https://github.com/celestiaorg/eq-service"

[workspace.dependencies]
chacha-lib = { path = "lib", default-features = false , version = "0.1.0"}

anyhow = "1.0"
hex = "0.4"
sha2 = "=0.10.8"
sp1-zkvm = "4.0"
sp1-sdk = "4.0"
chacha20 = "0.9"
jsonrpsee = { version = "0.24", features = ["macros", "server", "http-client"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1", features = ["full"] }
celestia-types = "0.11"
dotenv = "0.15"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
