[package]
name = "pda-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
celestia-types.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util.workspace = true
