[package]
name = "zkvm-common"
version.workspace = true
edition.workspace = true

[dependencies]
chacha20.workspace = true
rand = { workspace = true, default-features = false, optional = true, features = [
  "os_rng",
] }
sha2 = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["rand/os_rng", "sha2"]
