[package]
name = "sp1-util"
default-run = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
clap.workspace = true
sp1-sdk.workspace = true
hex.workspace = true
sha2.workspace = true
dotenv.workspace = true

zkvm-common = { workspace = true, features = ["std"] }

[build-dependencies]
sp1-build.workspace = true

# Greatly reduces cycle count when executing the zkVM program
# Also reflected in sp1/build.rs
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 1
